src/log/build_2022-06-02_10-00-44/python_publisher/stderr.log
  File "/home/kcg/ROS2Sample/src/install/python_publisher/lib/python3.8/site-packages/python_publisher/adaptive_cruise_control.py", line 147
    print("ego lane id :"self.ego_car_lane)
                         ^
SyntaxError: invalid syntax

